# OpenGL-ES-for-Android

./: .gitignore  README.md
chap01/: build.gradle  settings.gradle
chap01/app/: build.gradle
chap01/app/src/main/: AndroidManifest.xml
chap01/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
chap01/app/src/main/cpp/include/: com_example_chap01_NativeLibrary.h
chap01/app/src/main/java/com/example/chap01/: MainActivity.java  NativeLibrary.java
chap02/: README.md  settings.gradle
chap02/app/: build.gradle
chap02/app/src/main/: AndroidManifest.xml
chap02/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
chap02/app/src/main/cpp/include/: com_example_graphicsSetup_NativeLibrary.h
chap02/app/src/main/java/com/example/graphicsSetup/: MainActivity.java  NativeLibrary.java  TutorialView.java
chap03/: README.md  build.gradle  settings.gradle
chap03/app/: build.gradle
chap03/app/src/main/: AndroidManifest.xml
chap03/app/src/main/cpp/: native-lib.cpp
chap03/app/src/main/cpp/include/: com_example_simpleTriangle_NativeLibrary.h
chap03/app/src/main/java/com/example/simpleTriangle/: MainActivity.java  NativeLibrary.java  (+1 more)
chap04/: README.md  settings.gradle
chap04/app/: build.gradle
chap04/app/src/main/: AndroidManifest.xml
chap04/app/src/main/cpp/: CMakeLists.txt  matrix.cpp  native-lib.cpp
chap04/app/src/main/cpp/include/: com_example_simpleCube_NativeLibrary.h
chap05/: build.gradle  settings.gradle
chap05/app/: build.gradle
chap05/app/src/main/: AndroidManifest.xml
chap05/app/src/main/cpp/: CMakeLists.txt  Texture.cpp  native-lib.cpp
chap05/app/src/main/cpp/include/: Matrix.h  Texture.h  com_example_texturedcube_NativeLibrary.h
chap05/app/src/main/res/values/: strings.xml
chap06/: settings.gradle
chap06/app/: build.gradle
chap06/app/src/main/: AndroidManifest.xml
chap06/app/src/main/assets/shaders/: fragment.glsl  vertex.glsl
chap06/app/src/main/cpp/: AssetManagerHandler.cpp  CMakeLists.txt  Matrix.cpp  Shader.cpp  native-lib.cpp
chap06/app/src/main/cpp/include/: AssetManagerHandler.h  GLIncludes.h  Shader.h  com_example_lighting_NativeLibrary.h
chap06/app/src/main/res/layout/: my_layout.xml
chap06/app/src/main/res/values/: strings.xml
(+9 files in other folders)
